--- a/Game.ui
+++ b/Game.ui
@@ -54,6 +54,19 @@
      <string>TextLabel</string>
     </property>
    </widget>
+   <widget class="QLabel" name="licencetext">
+    <property name="geometry">
+     <rect>
+      <x>90</x>
+      <y>380</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <customwidgets>
